Add reading from txt file

--- a/ProgEngeLab2/ProgEngeLab2.vcxproj.filters
+++ b/ProgEngeLab2/ProgEngeLab2.vcxproj.filters
@@ -27,4 +27,10 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="students1.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="students1.txt" />
+  </ItemGroup>
 </Project>
