--- a/ProgEngeLab2/ProgEngeLab2.vcxproj
+++ b/ProgEngeLab2/ProgEngeLab2.vcxproj
@@ -153,6 +153,12 @@
   <ItemGroup>
     <ClInclude Include="func.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="students1.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="students1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
