Fixed reading from the file

--- a/ProgEngeLab2/ProgEngeLab2.vcxproj
+++ b/ProgEngeLab2/ProgEngeLab2.vcxproj
@@ -155,9 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="students1.csv" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="students1.txt" />
+    <None Include="students21.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
