--- a/ProgEngeLab2/ProgEngeLab2.vcxproj.filters
+++ b/ProgEngeLab2/ProgEngeLab2.vcxproj.filters
@@ -29,8 +29,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="students1.csv" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="students1.txt" />
+    <None Include="students21.csv" />
   </ItemGroup>
 </Project>
